--- a/index.html
+++ b/index.html
@@ -3,15 +3,58 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Text Randomizer</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="header">
-		<h1 class="header__text">Text Randomizer</h1>
+	<div class="nav-wrapper valign-wrapper teal lighten-2 z-depth-2 header">
+		<h1><a href="index.html" class="white-text">Text Randomizer</a></h1>
 	</div>
 
-	<textarea cols="100" rows="20" id="random-text" name="random-text" type="text" value="Randomize" width="500" height="600"></textarea>
-	<button id="random-text-btn">Randomize Text</button>
+	<div class="row">
+		<div class="col s4 offset-s1  randomize-form ">
+			<h4>Press Randomize Text</h4>
+			<button class="waves-effect waves-light btn z-depth-2" id="random-text-btn">Randomize Text</button>
+			<button class="waves-effect waves-light btn z-depth-2" id="output-results-btn">Output the Result</button>
+			<div class="input-field">
+				<textarea id="textarea1" class="materialize-textarea random-text" value="Randomize"></textarea>
+      	<label for="textarea1">Introduction</label>
+			<!-- <textarea cols="100" rows="20" id="intro text" name="random-text" type="text" value="Randomize" width="500" height="600"></textarea> -->
+			</div>
 
-	<script src="main.js"></script>
+			<div class="input-field">
+  		  <select id="select_path">
+    		  <option value="" disabled selected>Select the Number of Paragraphs</option>
+    		  <option value="1">1</option>
+  		    <option value="2">2</option>
+  		    <option value="3">3</option>
+					<option value="4">4</option>
+					<option value="5">5</option>
+  		  </select>
+    		<label>Select the Number of Paragraphs</label>
+		  </div>
+
+			<div class="input-field">
+				<textarea id="textarea2" class="materialize-textarea random-text" value="Randomize"></textarea>
+				<label for="textarea2">Body</label>
+			</div>
+
+			<div class="input-field">
+				<textarea id="textarea3" class="materialize-textarea random-text" value="Randomize"></textarea>
+				<label for="textarea3">Conclusion</label>
+			</div>
+		</div>
+
+		<div class="col s5 offset-s1 randomize-results">
+			<h4>Results</h4>
+			<div class="card-panel white" id="results-container"></div>
+		</div>
+	</div>
+	<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+	<script src="bundle.js"></script>
 </body>
 </html>
