--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Text Randomizer</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href="favicon.ico">
 </head>
 <body>
 	<div class="nav-wrapper valign-wrapper teal lighten-2 z-depth-2 header">
@@ -13,8 +14,8 @@
 
 	<div class="row">
 		<div class="col s4 offset-s1  randomize-form ">
-			<h4>Press Randomize Text</h4>
-			<button class="waves-effect waves-light btn z-depth-2" id="random-text-btn">Randomize Text</button>
+			<h4>Press Buttom to Randomize</h4>
+			<button class="waves-effect waves-light btn z-depth-2" id="random-text-btn">Random Text</button>
 			<button class="waves-effect waves-light btn z-depth-2" id="output-results-btn">Output the Result</button>
 			<div class="input-field">
 				<textarea id="textarea1" class="materialize-textarea random-text" value="Randomize"></textarea>
@@ -24,7 +25,7 @@
 
 			<div class="input-field">
   		  <select id="select_path">
-    		  <option value="" disabled selected>Select the Number of Paragraphs</option>
+    		  <option style="font-weight: bold" value="" disabled selected>Select Number</option>
     		  <option value="1">1</option>
   		    <option value="2">2</option>
   		    <option value="3">3</option>
@@ -47,8 +48,10 @@
 
 		<div class="col s5 offset-s1 randomize-results">
 			<h4>Results</h4>
+			<button class="copy-text waves-effect waves-light btn z-depth-2 ">Copy Textarea</button>
 			<div class="card-panel white" id="results-container"></div>
 		</div>
+
 	</div>
 	<script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
